[package]
name = "rust_spatial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_spatial"
path = "src/lib.rs"
test = true

[dependencies]
rand = "0.8.5"
# h3ron = "0.18.0"
# h3ron_h3_sys = "0.17.0"
h3o = "0.6.2"
